fait Todo_list exercice

--- a/Todo-list/index.html
+++ b/Todo-list/index.html
@@ -16,9 +16,12 @@
         <div id="todo">
             <div id="count">
                 <button id="btn">Add a task</button>
+                <div id="cardCounter">Number of tasks : </div>
                 <div id="todoCards">
-                    <textarea class="task" maxlength="200" cols="20" rows="15">New task</textarea>
-                    <span class="delBtn"><i class="fa-solid fa-trash-can" aria-hidden="true"></i></span>
+                    <div class="todoCard">
+                        <!-- <textarea class="task" maxlength="200" cols="20" rows="15">New task</textarea>
+                        <span class="delBtn"><i class="fa-solid fa-trash-can" aria-hidden="true"></i></span> -->
+                    </div>
                 </div>
             </div>
         </div>
