--- a/ExercicesJS/exo4/index.html
+++ b/ExercicesJS/exo4/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Exercices JS</title>
 </head>
 <body>
-    
+    <!-- <h1>Exercice 3</h1> -->
+    <div id="container">
+        <h2 id="socailName"></h2>
+        <div class="icon" data-color="#3b5998" data-name="Facebook"><i class="fa-brands fa-square-facebook"></i></div>
+        <div class="icon" data-color="#1da1f2" data-name="Twitter"><i class="fa-brands fa-square-twitter"></i></div>
+        <div class="icon" data-color="#e1306c" data-name="Instagram"><i class="fa-brands fa-square-instagram"></i></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
