--- a/ExercicesJS/exo3/index.html
+++ b/ExercicesJS/exo3/index.html
@@ -7,11 +7,11 @@
     <title>Exercices JS</title>
 </head>
 <body>
-    <div class="container">
-        <div class="carre">1</div>
-        <div class="carre">2</div>
-        <div class="carre">3</div>
-        <div class="carre">4</div>
+    <div class="grid">
+        <div class="square" onclick="toggleSquare(this)">1</div>
+        <div class="square" onclick="toggleSquare(this)">2</div>
+        <div class="square" onclick="toggleSquare(this)">3</div>
+        <div class="square" onclick="toggleSquare(this)">4</div>
     </div>
     
     <script src="script.js"></script>
