--- a/ExercicesJS/exo5/index.html
+++ b/ExercicesJS/exo5/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Exercices JS</title>
 </head>
 <body>
-    
+    <h1>Liste de Citations</h1>
+
+    <div id="qoutesContainer"></div>
+
+    <script type="module" src="quotes.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
